# trilium-cli

./: .env.example  .gitignore  .prettierignore  Cargo.toml  DEBUG_API_ERRORS.md  FIXES_SUMMARY.md  README.md  TUI_IMPROVEMENTS.md  demo-resize.tsx  demo-tui-showcase.tsx  demo-tui.md  docker-compose.test.yml  eslint.config.js  package-lock.json  package.json  test-core.js  test-simple-tui.js  test_content_format.md  test_editor_fix.md  test_tui_fixes.md  tsconfig.core.json  tsconfig.json  tsconfig.minimal.json  vitest.config.ts
.claude/agents/: typescript-tui-cli-expert.md
.github/: labeler.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  nightly.yml  performance.yml  pr-checks.yml  release.yml  security.yml  test.yml
docs/: EDITOR_FIX.md  external-editor.md
scripts/: build-minimal.ts  build-production.sh  fix-api-client.ts  fix-critical-errors.ts  fix-typescript-errors.ts
src/: completion.rs  config.rs  core-cli.test.ts  core-cli.ts  dx_integration.rs  error.rs  error.ts  help.rs  index.ts  lib.rs  main.rs  main.ts  minimal-cli.test.ts  minimal-cli.ts  models.rs  plugins.rs  progress.rs  progress_integration.rs  test-main.ts  tui-demo.tsx  tui-simple.tsx  validation-test.ts
src/api/: client.rs  client.ts  index.ts  mod.rs  types.ts
src/cli/: args.rs  index.ts  mod.rs  output.rs  types.ts
src/cli/commands/: attachment.rs  attachment.ts  attribute.rs  attribute.ts  backup.rs  backup.ts  branch.rs  branch.ts  calendar.rs  calendar.ts  completion.ts  config.rs  config.ts  editor-config.ts  etapi-complete.ts  help.rs  import-export.ts  import_export.rs  info.rs  link.rs  link.ts  mod.rs  note.rs  note.ts  pipe.rs  pipe.ts  plugin.ts  profile.rs  profile.ts  quick.rs  quick.ts  search.rs  search.ts  tag.rs  tag.ts  template.rs  template.ts  tui.ts
src/config/: index.ts
src/import-export/: dependency-loader.ts  index.ts  input-validation.ts  secure-exec.ts  secure-path.ts  types.ts  utils.ts
src/import-export/formats/: directory.ts  git.ts  notion.ts  obsidian.ts
src/import_export/: directory.rs  formats.rs  git.rs  mod.rs  notion.rs  obsidian.rs  tests.rs  utils.rs
src/lib/: index.ts
src/tui/: App.tsx  app.rs  event.rs  index.ts  index.tsx  mod.rs  types.ts  ui.rs
src/tui/components/: App.tsx  App_old.tsx  AttributeManager.tsx  CommandPalette.tsx  ContentView.tsx  CreateNoteDialog.tsx  ExternalNoteEditor.tsx  HelpPanel.tsx  InputModal.tsx  LoadingIndicator.tsx  NoteEditor.tsx  NoteViewer.tsx  SearchPanel.tsx  SearchView.tsx  SplitView.tsx  StatusBar.tsx  TreeView.tsx  index.ts
src/tui/hooks/: index.ts  useApi.ts  useAppState.ts  useKeyBindings.ts  useKeyboard.ts  useNavigation.ts  useNoteOperations.ts  useRetry.ts
src/tui/types/: index.ts
src/tui/utils/: contentFormat.ts  index.ts
src/types/: api.ts  cli.ts  common.ts  config.ts  index.ts  validation.ts
src/utils/: auth.ts  cli.ts  editor.ts  files.ts  format.ts  http-simple.ts  index.ts  interactive.ts  links.rs  links.ts  logger.ts  markdown.ts  mod.rs  quick-capture.ts  quick_capture.rs  rate-limiter.ts  rate_limiter.rs  resource-limits.ts  resource_limits.rs  search.rs  search.ts  tags.rs  tags.ts  templates.rs  templates.ts  terminal-state.ts  type-guards.ts  validation.ts
test/: setup.ts
test/api/: client.test.ts  types.test.ts
test/cli/: note.test.ts
test/cli/commands/: attachment.test.ts  search.test.ts  tag.test.ts
test/config/: config.test.ts
test/fixtures/trilium-init/: setup-trilium.ts
test/import-export/: formats.test.ts
test/integration/: README.md  api-integration.test.ts  cli-integration.test.ts  client-features.test.ts  error-handling.test.ts  live-api-integration.test.ts  live-test.config.ts  performance-benchmark.test.ts  run-live-tests.ts  test-server.ts
test/tui/: terminal-resize.test.ts
test/tui/components/: SearchView.test.tsx  TreeView.test.tsx
test/unit/: tui-features.test.ts
test/utils/: editor.test.ts  validation.test.ts
tests/: api_integration_test.rs  integration_test.rs  security_tests.rs
tests/common/: mod.rs
